workspace/log/build_2024-12-07_15-25-38/template_drone_control/stdout_stderr.log
[35m[1mScanning dependencies of target swaarm_control[0m
[ 50%] Built target template_drone_control_node
[ 75%] [32mBuilding CXX object CMakeFiles/swaarm_control.dir/src/swaarm_control.cpp.o[0m
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp: In lambda function:
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:89:38: error: expected ‘{’ before ‘=’ token
   89 |         [coordsDrone2, coordsDrone3] = calculateFollowerPositions(coordsDrone1, coordsDrone1.angle);
      |                                      ^
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp: In constructor ‘MultiDroneControl::MultiDroneControl()’:
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:89:99: error: no match for ‘operator=’ (operand types are ‘MultiDroneControl::MultiDroneControl()::<lambda()>’ and ‘std::pair<MultiDroneControl::Coords, MultiDroneControl::Coords>’)
   89 |         [coordsDrone2, coordsDrone3] = calculateFollowerPositions(coordsDrone1, coordsDrone1.angle);
      |                                                                                                   ^
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:89:36: note: candidate: ‘MultiDroneControl::MultiDroneControl()::<lambda()>& MultiDroneControl::MultiDroneControl()::<lambda()>::operator=(const MultiDroneControl::MultiDroneControl()::<lambda()>&)’ <deleted>
   89 |         [coordsDrone2, coordsDrone3] = calculateFollowerPositions(coordsDrone1, coordsDrone1.angle);
      |                                    ^
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:89:36: note:   no known conversion for argument 1 from ‘std::pair<MultiDroneControl::Coords, MultiDroneControl::Coords>’ to ‘const MultiDroneControl::MultiDroneControl()::<lambda()>&’
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:65:16: warning: unused variable ‘droneCoords’ [-Wunused-variable]
   65 |         Coords droneCoords;
      |                ^~~~~~~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp: In member function ‘std::pair<MultiDroneControl::Coords, MultiDroneControl::Coords> MultiDroneControl::calculateFollowerPositions(const MultiDroneControl::Coords&, double)’:
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:166:16: warning: unused variable ‘angleRad’ [-Wunused-variable]
  166 |         double angleRad = angle * M_PI / 180.0;
      |                ^~~~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp: In member function ‘void MultiDroneControl::move_drone(const string&, const MultiDroneControl::Coords&)’:
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:208:9: error: ‘target_pose’ was not declared in this scope
  208 |         target_pose.pose.orientation.x = q.x();
      |         ^~~~~~~~~~~
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp: In member function ‘MultiDroneControl::Coords MultiDroneControl::get_coords(const string&)’:
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:244:13: warning: unused variable ‘i’ [-Wunused-variable]
  244 |         int i = 0;
      |             ^
/home/lrs-ubuntu/Documents/GitHub/LRS-zadania/workspace/src/template_drone_control/src/swaarm_control.cpp:242:42: warning: unused parameter ‘ns’ [-Wunused-parameter]
  242 |     Coords get_coords(const std::string &ns){
      |                       ~~~~~~~~~~~~~~~~~~~^~
make[2]: *** [CMakeFiles/swaarm_control.dir/build.make:63: CMakeFiles/swaarm_control.dir/src/swaarm_control.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:80: CMakeFiles/swaarm_control.dir/all] Error 2
make: *** [Makefile:141: all] Error 2
